--- a/config.toml
+++ b/config.toml
@@ -64,7 +64,7 @@ enableGitInfo = false
 
   # Details for the Contact Widget
   email = "jiajun.duan@geirina.net"
-  address = "250 W Tasman Dr, San Jose, California, 95134, USA"
+  address = "250 W Tasman Dr STE100, San Jose, California, 95134, USA"
   office_hours = """
   Monday 10:00 to 13:00\\
   Wednesday 09:00 to 10:00\\
