--- a/config.toml
+++ b/config.toml
@@ -266,9 +266,9 @@ enableGitInfo = false
     link = "#contact"  # For a direct email link, use "mailto:test@example.org".
 
   [[params.social]]
-    icon = "twitter"
+    icon = "linkedin"
     icon_pack = "fab"
-    link = "https://twitter.com/GeorgeCushen"
+    link = "https://www.linkedin.com/in/jiajunduancary/"
 
   [[params.social]]
     icon = "google-scholar"
